k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vdlg-notification
  namespace: vdlg
spec:
  selector:
    matchLabels:
      app: vdlg-notification
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  template:
    metadata:
      annotations:
        kubernetes.io/change-cause: "UPDATE"
      labels:
        app: vdlg-notification
        environment: "dev"
        version: "1.0.0"
    spec:
      automountServiceAccountToken: false
      containers:
        - name: vdlg-notification
          image: tbtec/vdlg-notification:1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /live
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 4
            successThreshold: 1
          resources:
            requests:
              memory: "80Mi"
              cpu: "80m"
              ephemeral-storage: "100Mi"
            limits:
              memory: "400Mi"
              cpu: "200m"
              ephemeral-storage: "500Mi"
      terminationGracePeriodSeconds: 30
      nodeSelector: {}
      tolerations: []
