k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vdlg-notification
  namespace: vdlg
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  labels:
    app: vdlg-notification
    environment: "dev"
spec:
  # type: LoadBalancer
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: "TCP"
  selector:
    app: vdlg-notification
